// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="cf-cmkk1"
>
  Hello
</div>
`;

exports[`should render 1 button 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-1q4jcs1"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 2 buttons 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-1d4aodt"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-1q4jcs1"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-1d4aodt"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-6fc9pt"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-1q4jcs1"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons with spacing 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-1j4oug9"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-ghijkx"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-ghijkx"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;
